Corrected legend overflow fix for JAWS screen reader

--- a/public/stylesheets/vat-v1.css
+++ b/public/stylesheets/vat-v1.css
@@ -10,3 +10,7 @@
 .date-entry-label-margin {
     margin-right: 25px !important;
 }
+
+legend {
+    overflow: visible;
+}
